Fix overflow-y: scroll causing right-side white margin on template layout

--- a/src/components/pages/DesktopFormComplete/Template/styles.module.scss
+++ b/src/components/pages/DesktopFormComplete/Template/styles.module.scss
@@ -8,7 +8,7 @@
   background-repeat: no-repeat;
   background-color: var(--primary-black);
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
